@@ -19,7 +19,7 @@ return {
 		collisionvolumetype = "CylZ",
 		corpse = "dead",
 		defaultmissiontype = "Standby",
-		description = "All-Terrain Psychic Shield Quadrupod",
+		description = "Psychic Shield Quadrupod",
 		energystorage = 10000,
 		explodeas = "BANTHA_BLAST",
 		firestandorders = 1,
@@ -36,7 +36,7 @@ return {
 		maxvelocity = 1.2,
 		maxwaterdepth = 24,
 		mobilestandorders = 1,
-		movementclass = "HTKBOT7",
+		movementclass = "HKBOT7",
 		name = "Archon",
 		noautofire = false,
 		objectname = "gok_archon",
