@@ -19,7 +19,7 @@ return {
 		collisionvolumetype = "CylY",
 		corpse = "dead",
 		defaultmissiontype = "Standby",
-		description = "All-Terrain Battle Quadrupod",
+		description = "Amphibious Battle Quadrupod",
 		energystorage = 0,
 		explodeas = "BANTHA_BLAST",
 		firestandorders = 1,
@@ -35,7 +35,7 @@ return {
 		maxvelocity = 1.3,
 		maxwaterdepth = 24,
 		mobilestandorders = 1,
-		movementclass = "HTKBOT6",
+		movementclass = "VKBOT6",
 		name = "Asmodee",
 		noautofire = false,
 		objectname = "gok_asmodee",
