@@ -1,8 +1,11 @@
  4.48 => 4.49
-2023-06-02
+2023-06-08
 
 Balance :
  - Increase buildtime for all commander. Goal is to add more time to capture them.
+ - Gok Kadesh : Decrease speed 1.1 => 1.0
+ - Gok Asmodee : delete All-Terrain and add Amphibious
+ - Gok Archon : Delete All-Terrain
 
 Improvment :
 - Add T4 Lab and T4 Units for Rumad
